[tool.poetry]
name = "taskw-ng"
version = "0.0.0"
description = "Python bindings for your taskwarrior database"
license = "GPLv3+"
authors = [
  "Nikos Koukis <nickkouk@gmail.com>",
  "Ralph Bean <ralph.bean@gmail.com>",
]
readme = "README.rst"
homepage = "https://github.com/bergercookie/taskw-ng"
repository = "https://github.com/bergercookie/taskw-ng"
include = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Intended Audience :: Developers",
]
keywords = ["taskwarrior", "task"]

# [tool.poetry.scripts]
# [tool.poetry.extras]

# end-user dependencies --------------------------------------------------------
[tool.poetry.dependencies]
python = "^3.8"
kitchen = "^1.2.6"
pytz = "^2023.3.post1"
python-dateutil = "^2.8.2"

# dev dependencies -------------------------------------------------------------
[tool.poetry.dev-dependencies]
black = { version = "22.3.0", allow-prereleases = true }
identify = "^2.4.0"
isort = "^5.10.1"
mock = "*"
mypy = "*"
pdbpp = "^0.10.3"
pre-commit = "^2.16.0"
pyfakefs = "^4.5.3"
pylint = "^2.12.2"
pyright = "*"
pytest = "*"
tox = "<3.0.0"
types-PyYAML = "^5.4.1"
types-python-dateutil = "^2.8.3"
types-setuptools = "^57.4.4"
google-api-python-client-stubs = "^1.9.0"
coverage = { version = "^6.2", extras = ["toml"] }
coveralls = "^3.3.1"
pycln = "^1.3.1"
check-jsonschema = "^0.14.3"
# readline = "6.2.4.1"
ruff = "^0.1.5"

# isort ------------------------------------------------------------------------
[tool.isort]
include_trailing_comma = true
line_length = 95
multi_line_output = 3
profile = "black"

# black ------------------------------------------------------------------------
[tool.black]
preview = true
line-length = 95
target-version = ['py38', 'py39']
include = '\.pyi?$'

# mypy -------------------------------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

# pylint -----------------------------------------------------------------------
[tool.pylint]
[tool.pylint.master]
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
ignore = "VCS"

[tool.pylint.messages_control]
disable = "C0330,C0326,C0103,W0613,R0201,R1720,R1705,W0104,C0301"

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = "sys.exit,argparse.parse_error"

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "no"
ignore-imports = "yes"
# ignore-signatures=no
min-similarity-lines = 4

[tool.pylint.format]
max-line-length = 95
ignore-invalid-name = true
max-module-lines = 500

[tool.pylint.string]
check-quote-consistency = "yes"

# pyright ----------------------------------------------------------------------
[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

# ruff -------------------------------------------------------------------------
[tool.ruff]
line-length = 95
target-version = "py38"

# coverage.py ------------------------------------------------------------------
[tool.coverage]
[tool.coverage.run]
omit = ["*/.pdbrc.py", "tests/*"]

# pytest -----------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-v", "norecursedirs=lib", "taskwarrior"]

# build-system -----------------------------------------------------------------
[tool.poetry-dynamic-versioning]
enable = true
metadata = false
dirty = false
style = "pep440"

[tool.poetry-dynamic-versioning.files."taskw/__version__.py"]
persistent-substitution = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# vim: tw=80
